Updated to oclif v2 and fixed DNSimple errors

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,12 @@
-node_modules/
-.env
-.idea/
-.vscode/
-.DS_Store
-Thumbs.db
-config/
+**/.DS_Store
 *-debug.log
 *-error.log
+/.idea
 /.nyc_output
 /dist
+/lib
 /package-lock.json
 /tmp
+/yarn.lock
+node_modules
+oclif.manifest.json
